@@ -30,7 +30,7 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 	@Bean
 	public Docket apiV1() {
 		version = "v1";
-		title = "Free-Polling API";
+		title = "Gollaba API";
 
 		return new Docket(DocumentationType.OAS_30)
 				.consumes(getConsumeContentTypes())
@@ -42,8 +42,8 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 				.paths(PathSelectors.ant(Const.ROOT_URL + "/**"))
 				.build()
 				.apiInfo(apiInfo(title, version))
-				.securityContexts(Arrays.asList(securityContext()))
-				.securitySchemes(Arrays.asList(apiKey()));
+				.securityContexts(List.of(securityContext()))
+				.securitySchemes(List.of(accessToken(), refreshToken()));
 	}
 
 	@Override
@@ -57,11 +57,11 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 
 		Server devServer = new Server();
 		devServer.setDescription("dev");
-		devServer.setUrl("https://dev.free.polling.com");
+		devServer.setUrl("https://dev.api.gollaba.net");
 
 		Server prodServer = new Server();
 		prodServer.setDescription("prod");
-		prodServer.setUrl("https://free.polling.com");
+		prodServer.setUrl("https://api.gollaba.net");
 
 		openApi.setServers(List.of(localServer, devServer, prodServer));
 
@@ -76,7 +76,7 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 	private ApiInfo apiInfo(String title, String version) {
         return new ApiInfo(
 				title,
-				"Free-Polling API Docs",
+				title + " Docs",
 				version,
 				null,
 				null,
@@ -84,9 +84,13 @@ public class SwaggerConfig implements WebMvcOpenApiTransformationFilter {
 				null,
 				new ArrayList<>());
     }
-    
-	private ApiKey apiKey() {
-		return new ApiKey("JWT", "Authorization", "header");
+
+	private ApiKey accessToken() {
+		return new ApiKey("accessToken", Const.ACCESS_TOKEN_HEADER, "header");
+	}
+
+	private ApiKey refreshToken() {
+		return new ApiKey("refreshToken", Const.REFRESH_TOKEN_HEADER, "header");
 	}
 
 	private SecurityContext securityContext() {
